# 3D_renderer

./: .gitmodules  CMakeLists.txt  Makefile  README.md  report.md
cpu_wireframing/: CMakeLists.txt
cpu_wireframing/include/: Clipper.hpp  InputHandler.hpp  MiniGLM.hpp  ModelMatrix.hpp  ProjectionMatrix.hpp  Rasterizer.hpp  ScreenMapper.hpp  VertexProcessor.hpp  ViewMatrix.hpp  WireframeApp.hpp
cpu_wireframing/src/: Clipper.cpp  InputHandle.cpp  ModelMatrix.cpp  ObjParser.cpp  ProjectionMatrix.cpp  Rasterizer.cpp  RenderFileMain.cpp  RenderGUIMain.cpp  ScreenMapper.cpp  VertexProcessor.cpp  ViewMatrix.cpp  WireframeApp.cpp  main.cpp
gpu_wireframing/: CMakeLists.txt
gpu_wireframing/include/: Framer.hpp  InputHandler.hpp  Mesh.hpp  MiniGLM.hpp  ObjParser.hpp  ProjectionMatrix.hpp  Renderer.hpp  Shader.hpp  ViewMatrix.hpp
gpu_wireframing/include/glad/: glad.h
gpu_wireframing/shaders/advanced/: fragment_shader.glsl  vertex_shader.glsl
gpu_wireframing/shaders/basic/: fragment_shader.glsl
gpu_wireframing/src/: Framer.cpp  InputHandler.cpp  Mesh.cpp  ModelMatrix.cpp  ProjectionMatrix.cpp  Renderer.cpp  Shader.cpp  ViewMatrix.cpp  glad.c  main.cpp
include/: Framer.hpp  InputHandler.hpp  Mesh.hpp  ModelMatrix.hpp  ObjParser.hpp  ProjectionMatrix.hpp  Renderer.hpp  Shader.hpp  ViewMatrix.hpp
include/glad/: glad.h
shaders/advanced/: vertex_shader.glsl
src/: Framer.cpp  InputHandler.cpp  Mesh.cpp  ModelMatrix.cpp  ObjParser.cpp  ProjectionMatrix.cpp  Renderer.cpp  Shader.cpp  ViewMatrix.cpp  glad.c  main.cpp
